Done with Stuff

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <a href="#">Media Center</a>
                             </li>
                             <li class="mb-2">
-                                <a href="#">diaries Shop</a>
+                                <a href="#">Netflix Shop</a>
                             </li>
                             <li class="mb-2">
                                 <a href="#">Ways to Watch</a>
