--- a/home wala.html
+++ b/home wala.html
@@ -27,7 +27,7 @@
             <h1 id="banner-title"></h1>
             <div id="button-container">
                 <a href=""></a><button id="play-button">
-              <img   style="width: 0.8rem; height: 0.8rem;" src="/img/11.jpeg" />
+              <img   style="width: 0.8rem; height: 0.8rem;" src="/img/" />
                                      <span>Play</span>
                 </button>
                 <button id="more-info">
