--- a/Pages/UserPage.html
+++ b/Pages/UserPage.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="wala.css">
+    <link rel="stylesheet" href="../wala.css">
     <link rel="icon" href="/assests/captain .ico">
     <title>captain </title>
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-12/assets/css/login-12.css">
+    <link rel="stylesheet" href="Pages/profilePage.css">
 </head>
 
 <body>
@@ -18,6 +21,7 @@
             <div id="searchResults"></div>
         </div>
         <button id="goToWatchlist" class="watchList-Btn">WatchList</button>
+        <button id="goToWatchlist" class="watchList-Btn">Profile</button>
     </header>
 
     <!-- Banner container -->
@@ -27,8 +31,8 @@
             <h1 id="banner-title"></h1>
             <div id="button-container">
                 <a href=""></a><button id="play-button">
-              <img   style="width: 0.8rem; height: 0.8rem;" src="/img/11.jpeg" />
-                                     <span>Play</span>
+                    <img style="width: 0.8rem; height: 0.8rem;" src="/img/11.jpeg" />
+                    <span>Play</span>
                 </button>
                 <button id="more-info">
                     <img id="info-icon" src="/img/10.jpeg" />
@@ -150,8 +154,100 @@
             <button class="navigation-button next action-next">&gt;</button>
         </div>
     </section>
-
-    <script src="wala.js"></script>
+    <footer class="py-5 bg-black text-light">
+        <div class="container">
+            <div>
+                <p>Questions? Call <a href="#">0900900900</a></p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-4">
+                    <ul>
+                        <li class="mb-2">
+                            <a href="#">FAQ</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Media Center</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">diaries Shop</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Ways to Watch</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Cookie Preferences</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Speed Text</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Only on diaries</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <ul>
+                        <li class="mb-2">
+                            <a href="#">Help Center</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Investor Relations</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Redeem gift cards</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Terms of Use</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Corporate Information</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Legal Guarantee</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Advert ChoiCes</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <ul>
+                        <li class="mb-2">
+                            <a href="#">Account</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Jobs</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Buy Gift Cards</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Privacy</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Contact us</a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#">Legal Notices</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="py-3">
+                <div class="position-absolute">
+                    <img class="position-absolute" width="17" src="./img/Globe.svg" alt="globe">
+                </div>
+                <div class="position-absolute">
+                    <div class="arrow-down position-absolute"></div>
+                </div>
+                <select class="position-relative py-1" name="" id="">
+                    <option value="">English</option>
+                </select>
+            </div>
+            <p>diaries United Kingdom</p>
+        </div>
+    </footer>
+    <script src="../wala.js"></script>
 </body>
 
 </html>
