--- a/Pages/profilePage.html
+++ b/Pages/profilePage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/logins/login-12/assets/css/login-12.css">
     <link rel="stylesheet" href="profilePage.css">
+    <script src="./profilePageScript.js"></script>
 </head>
 
 <body>
@@ -52,18 +53,17 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <div class="col-6">
+                                            <!-- <div class="col-6">
                                                 <div class="text-end colorWhite">
                                                     <a href="#!" class="link-secondary text-decoration-none">Forgot
                                                         password?</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="d-grid">
-                                            <button class="btn btn-lg btn-dark rounded-0 fs-6" type="submit">Log
-                                                in</button>
+                                            <button class="btn btn-lg btn-dark rounded-0 fs-6" id="submit"><a href="./UserPage.html">Log in</a></button>
                                         </div>
                                     </div>
                                 </div>
@@ -196,7 +196,7 @@
             </div>
             <div class="py-3">
                 <div class="position-absolute">
-                    <img class="position-absolute" width="17" src="./img/globe-icon.png" alt="globe">
+                    <img class="position-absolute" width="17" src="../img/Globe.svg" alt="globe">
                 </div>
                 <div class="position-absolute">
                     <div class="arrow-down position-absolute"></div>
